@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.75 2017/01/18 13:52:44 manu Exp $
+# $NetBSD: Makefile,v 1.76 2017/03/07 08:39:39 manu Exp $
 
-DISTNAME=	glusterfs-3.8.8
+DISTNAME=	glusterfs-3.8.9
 #PKGREVISION=	1
 CATEGORIES=	filesystems
 MASTER_SITES=	http://bits.gluster.org/pub/gluster/glusterfs/src/
@@ -21,7 +21,7 @@ CONFIGURE_ARGS+=	--localstatedir=${VARBASE}
 # Only libfl.a is available, and libtool wants libfl.so
 MAKE_FLAGS+=		LEXLIB=""
 
-PYTHON_VERSIONS_INCOMPATIBLE=	34 35 36  # only 2.x supported as of 3.8.8
+PYTHON_VERSIONS_INCOMPATIBLE=	34 35 36 # only 2.x supported as of 3.8.x
 
 REPLACE_PYTHON+=	contrib/ipaddr-py/ipaddr.py
 REPLACE_PYTHON+=	extras/ganesha/scripts/generate-epoch.py
